# warehouse_management

./: .env  Cargo.toml  shell.nix  warehouse.db
.idx/: dev.nix
migrations/2024-05-28-061413_create_schema/: down.sql  up.sql
src/: 1  admin_init.rs  claims.rs  db.rs  init.sql  lib.rs  main.rs  migrations.rs  models.rs  network_setup.rs  rocket_config.rs  routers.rs  schema.rs  test.http  token.rs  warehouse.rs
src/routers/: material.rs  material_request.rs  mod.rs  operation_log.rs  permission.rs  price_formula.rs  product_specification.rs  production_cost.rs  production_task.rs  role.rs  role_permission.rs  user.rs  user_role.rs  warehouse.rs
tmp/: 产品与材料管理表.sql  仓库管理表.sql  日志记录和报表.sql  生产与预算管理表.sql  用户与权限管理表.sql
