[package]
name = "app1"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "numeric", "serde_json", "sqlite", "r2d2"] }
dotenvy = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "0.4", features = ["serde"] } 
rocket = { version = "^0.5", features = ["json"] }
rocket_sync_db_pools = { version = "^0.1", features = ["diesel_sqlite_pool"] }
rocket_cors = "0.6.0"

# rusqlite = "^0.31"
rand = "^0.8"
libsqlite3-sys = { version = "^0.28", features = ["bundled"] }

async-std = "^1"
futures = "^0.3"
uuid = { version = "1", features = ["v4"] }
env_logger = "^0.11"

libp2p = "0.46.1"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "io"] }
bigdecimal = "0.4"
log = "^0.4"
log4rs = "^1.3"
serde_yaml = "0.9.34+deprecated"
rust_decimal = "1.33.1"
jsonwebtoken = "^9.3.0"

async-trait = "0.1.80"
base64 = "0.22.1"


[dependencies.rocket_dyn_templates]
version = "^0.2"
features = ["handlebars"]

[dependencies.rocket_contrib]
version = "^0.4"
features = ["json"]

[dependencies.diesel_migrations]
version = "^2.2"